update ferramentas edit

--- a/Belutecnica/Intranet/Views/Ferramentas/Edit.cshtml
+++ b/Belutecnica/Intranet/Views/Ferramentas/Edit.cshtml
@@ -19,9 +19,9 @@
                 <span class="fa fa-save"></span> Gravar
             </button>
 
-            <button id="btGravar" class="btn btn-sm btn-outline-success" onclick="funtion:gravar(true,'@Model.Documento.documento')">
+            @*<button id="btGravar" class="btn btn-sm btn-outline-success" onclick="funtion:gravar(true,'@Model.Documento.documento')">
                 <span class="fa fa-floppy-o"></span> Gravar e Sair
-            </button>
+            </button>*@
 
             <button id="btImprir" class="btn btn-sm btn-outline-primary" hidden>
                 <span class="fa fa-print"></span> Imprimir
