--- a/Belutecnica/Intranet/Views/Ferramentas/_add.cshtml
+++ b/Belutecnica/Intranet/Views/Ferramentas/_add.cshtml
@@ -55,7 +55,7 @@
             </div>
             <div class="modal-footer">
 
-                <button id="btActualizar" type="button" class="btn btn-success" onclick="funtion:AddRow()">
+                <button id="btActualizar" type="button" class="btn btn-success" onclick="funtion:EditRow()">
                     <span class='fa fa-upload'></span> Actualizar
                 </button>
 
